--- a/main2.html
+++ b/main2.html
@@ -43,6 +43,10 @@
             <img src="imgs/3.jpg" class="in_img">
         </span>
     </div>
+    <div style="background-color:#fff;width:100px; height:100px;">
+        <input type="radio" id="test">
+        <label for="test"></label>
+    </div>
 <body>
 </body>
 </html>
